Лаб 5 + лаб 4 исправления